Solve linter errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <li id="link-contact"><a href="#">Contact</a></li>
         </ul>
       </nav>
-      <p class="date"></p>
+      <p class="date">
+        
+      </p>
     </header>
 
     <main>
@@ -36,7 +38,7 @@
         <h2>Add a new book</h2>
         <input type="text" name="title" id="title" placeholder="Title" />
         <input type="text" name="Author" placeholder="Author" id="author" />
-        <button id="add-btn">Add</button>
+        <button id="add-btn" type="button">Add</button>
       </section>
 
       <section class="contact hidden" id="contact">
@@ -57,7 +59,7 @@
     <footer>
       <div class="footer-container">
         <small class="copyright">
-          rights reserved kigozi Joseph suubi and Sohail batoor @ 2023
+          rights reserved kigozi Joseph suubi @ 2023
         </small>
       </div>
     </footer>
